# jlcrs

./: Cargo.toml  README.md  notes.md
src/: args.rs  dev.rs  main.rs
src/easyeda/: errors.rs  footprint.rs  geometry.rs  json_reader.rs  mod.rs  model.rs  symbol.rs  tests.rs
src/easyeda/api/: component_data.rs  mod.rs  product_data.rs
src/kicad/: mod.rs  syntax.rs
src/kicad/model/: common.rs  footprint_lib_table.rs  footprint_library.rs  footprint_utils.rs  graphical.rs  mod.rs  symbol_lib_table.rs  symbol_library.rs  symbol_utils.rs
