[package]
name = "jlcrs"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = "3.0.0-rc3"
anyhow = "1.0.94"
thiserror = "2.0.9"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = { version = "0.26.3", features = ["derive"] }
itertools = "0.14.0"
chrono = "0.4.39"
actix-web = "4.9.0"
regex = "1.11.1"
clap = { version = "4.5.31", features = ["derive"] }
sanitize-filename = "0.6.0"
opencascade = "0.2.0"